Version 1.3.X
-------------
* Fix bug where snapintasks if generated after main tasking and before that
tasking is created, get closed and not properly closing the actual deployed
task.
* Fix proxy information to NOT proxy storage node internalized Storage Node
information.
* Fix multicast issues for all relevant systems. Thank you Curtis.
* Fix snapins operate only if the host has snapins.
* Fix size display of images on server to display proper sizes through the use
of rawlist.
* Move clamav off of server to static binaries.  Bumps size of installer
folder from 80MB to 277MB.  However clamav is not loaded in the initrd file
and this same clamav can operate on the fog server.
* Have Vista and XP images follow the same format as Windows 7 and higher
images.
* Make compatibility checks to allow older named images to still download.
* Change mac address and associations so they are all stored in a single
table.
* Change resizable images to all use the same principle of Linux resizable.
This should allow OEM built systems to be imaged even with resizable.
* Init's are now truly native with dns pulling.
* Added to inits to check for has_usb_nic flag which simply tells the system
to wait for the user to unplug and replug their usb nics.
* Trying to see if bind/unbind to all usb devices will work in much the same
as the above to make no requirement of the has_usb_nic parameter.
* Update init.xz/init_32.xz to 2014.08 and update kernel infos to 3.16.1
within the inits
* Add protection flag to image files.
* Add installer files from David Fear to fog to allow FOG Installation on
Arch Linux.
* Add partition imaging selection options into GUI and fog to operate within.
* Add ipxe support for Apple EFI and better generalized EFI support.  Special
thanks to Michael Brown, the iPXE team, and Curtis Larsen for taking the time
to debug and correct and make this work.
* Add support for Apple Mac OS support in our systems.